Cập nhật quan hệ annotaion nhìu nhìu. chỉnh lại mấy api tạo Novel cho hết ngu, chỉnh lại api getAll Author